      now more efficiently (just a transpose with proper scaling) in case of
      non-oblique transformations.
    - :class:`~mvpa.datasets.gifti` can write GIFTI files that contain both
      dataset samples and surface anatomy (vertices and faces). Such GIFTI
      files can be read by FreeSurfer.


  * Fixes

    - 2.4.0 was released with incorrect `__version__` (as 2.3.1)

* 2.4.0 (Mon, 11 May 2015)

  * New functionality

    - Support for CoSMoMVPA (http://cosmomvpa.org) in
      :mod:`~mvpa2.datasets.cosmo` providing dataset input/output
      (:meth:`~mvpa2.datasets.cosmo.cosmo_dataset` and
      :meth:`~mvpa2.datasets.cosmo.map2cosmo`) and neighborhood input
      (:class:`~mvpa2.datasets.cosmo.CosmoQueryEngine`). This allows for
      for running searchlights (:class:`mvpa2.datasets.cosmo.CosmoSearchlight`)
      on data from CoSMoMVPA (fMRI and MEEG).
    - :func:`~mvpa2.datasets.miscfx.remove_nonfinite_features` removes
      features with non-finite values, i.e. NaNs or Infs, for any sample.
    - :func:`~mvpa2.misc.stats.binomial_proportion_ci` for computing
      confidence intervals on proportions of Bernoulli trial outcomes.
    - New mapper for removing sample means from features:
      :class:`~mvpa2.mappers.fx.MeanRemoval`
    - New algorithm for statistical evaluation of clusters in accuracy maps
      of group-based searchlight classification analyses. This is essentially
      an improved implementation of Stelzer et al., NeuroImage, 2013:
      :class:`~mvpa2.algorithms.group_clusterthr.GroupClusterThreshold`
    - New identity mapper. Does nothing, but goes were only mappers can go.
    - Simplified selection of samples/feature in a dataset. One can now
      specify sets of attribute values to define sample/feature subsets.
    - IO adaptor for OpenFMRI-formated datasets:
      :class:`~mvpa2.datasets.sources.native.OpenFMRIDataset`.
      Load arbitrary bits from such