@@ -52,6 +52,10 @@ Releases
 
     - 2.4.0 was released with incorrect `__version__` (as 2.3.1)
 
+  * Internal changes
+
+    - Drop support for nibabel < 2.0.0
+
 * 2.4.0 (Mon, 11 May 2015)
 
   * New functionality
